refactor projec to DAO (in process)